--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
 language: ruby
+before_script:
+  - psql -c 'create database OpenItemSets_test;' -U postgres
+  - cp config/database.travis.yml config/database.yml
 rvm:
   - "2.1.0"
