--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,9 @@ language: ruby
 before_script:
   - psql -c 'create database OpenItemSets_test;' -U postgres
   - cp config/database.travis.yml config/database.yml
+script: 
+  - RAILS_ENV=test bundle exec rake db:migrate --trace
+  - bundle exec rake db:test:prepare
+  - bundle exec rspec spec/
 rvm:
   - "2.1.0"
