--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: ruby
 before_script:
   - cp config/database.travis.yml config/database.yml
 script: 
-  - bundle exec rake db:test:prepare
+  - bundle exec rake db:schema:load RAILS_ENV=test
   - bundle exec rspec spec/
 rvm:
   - "2.1.0"
