--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: ruby
 before_script:
   - cp config/database.travis.yml config/database.yml
+  - psql -c 'create database OpenItemSets_test;' -U postgres
 script: 
-  - bundle exec rake db:schema:load RAILS_ENV=test
   - bundle exec rspec spec/
 rvm:
   - "2.1.0"
