--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: ruby
+services:
+  - redis-server
 before_script:
   - cp config/database.travis.yml config/database.yml
   - cp config/ois_config.example.yml config/ois_config.yml
   - bundle exec rake db:setup RAILS_ENV=test
+  - bundle exec rake riot:load_preset
 script: 
   - bundle exec rspec spec/
 rvm:
